...
    }

    override func viewDidLoad() {
        super.viewDidLoad()

        view.backgroundColor = .systemBackground
        button.configureTintedButton(withTitle: "Show A")
        button.center = view.center
        view.addSubview(button)
        
        present(item: $store.scope(state: \.aFeature, action: \.aFeature)) { store in
            AViewController(store: store)
        }
...
